2005-03-20  Richard Hult  <richard@imendio.com>

	* src/planner-gantt-view.c: (get_label):
	* src/planner-sidebar.c: (sidebar_init), (sidebar_modify_bg),
	(planner_sidebar_append), (planner_sidebar_set_active):
	* src/planner-ttable-view.c: (get_label): Tweak the sidebar a bit.

2005-03-15  Richard Hult  <richard@imendio.com>

	Fix bug #157254.
	
	* libplanner/mrp-time.c: Add new (temporary) API and use it to
	improve performance a lot with large projects. Long term we should
	either switch to it completely or rename it.

	* src/planner-gantt-background.c: (gantt_background_draw):
	* src/planner-gantt-header.c: (gantt_header_init),
	(gantt_header_expose_event), (gantt_header_motion_notify_event):
	* src/planner-gantt-print.c: (print_time_header):
	* src/planner-scale-utils.c: (planner_scale_format_time):
	* src/planner-scale-utils.h:
	* src/planner-task-dialog.c: (task_dialog_update_schedule_label),
	(task_dialog_calendar_changed_cb): Use the new API.

	* tests/time-test.c: Remove obsolete test.

2005-03-13  Richard Hult  <richard@imendio.com>

	* Release 0.13.
	
	* Makefile.am: Fix build.

	* configure.in: Bump to 0.13

	* src/planner-gantt-print.c (planner_gantt_print_do): 
	* src/planner-python-plugin.c (plugin_exit): Remove C++ comment.

2005-03-09  Richard Hult  <richard@imendio.com>

	* Makefile.am: Remove unmaintained spec file.

	* configure.in: Add --disable-update-mimedb for packagers.
	* data/mime/Makefile.am: Use it here.

	* src/planner-cmd-manager.c (cmd_manager_insert)
	(cmd_manager_ensure_limit, planner_cmd_manager_end_transaction):
	Don't cut off in the middle of transactions when limiting the undo
	history.

2005-03-03  Richard Hult  <richard@imendio.com>

	* Release 0.12.94.

	* configure.in: Bump to 0.12.94.

	* src/planner-task-tree.c: (task_cmd_move),
	(planner_task_tree_remove_task), (planner_task_tree_unlink_task),
	(planner_task_tree_link_tasks), (planner_task_tree_indent_task),
	(planner_task_tree_unindent_task),